[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/crack01.png" type="Texture" id=1]
[ext_resource path="res://assets/crack02.png" type="Texture" id=2]
[ext_resource path="res://scenes/attacks/Quake.gd" type="Script" id=3]
[ext_resource path="res://scenes/attacks/QuakeEffect.tscn" type="PackedScene" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Quake" type="Area2D"]
position = Vector2( 0, 20 )
script = ExtResource( 3 )
quake_effect = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 32 )
frames = SubResource( 1 )
playing = true
offset = Vector2( 0, -45 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -97, -1, 0, 48, 106, -2, 0, -52 )

[connection signal="body_entered" from="." to="." method="_on_Quake_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Quake_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
